--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -9,6 +9,14 @@
     }
   },
   "profiles": {
+    "RegistroDePontosApi": {
+    "commandName": "Project",
+    "dotnetRunMessages": true,
+    "launchBrowser": true,
+    "applicationUrl": "https://localhost:5001;http://localhost:5189",
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Development"
+    },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
@@ -38,4 +46,5 @@
       }
     }
   }
+}
 }
