autenticação em jwt funcionando

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key" : "",
+    "Issuer": "",
+    "Audience": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
