--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,9 @@
     "Issuer": "",
     "Audience": ""
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SEU_SERVIDOR;Database=RegistroPontoDB;User Id=SEU_USUARIO;Password=SUA_SENHA;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
