Conectando ao sqlserver

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Jwt": {
-    "Key" : "",
-    "Issuer": "",
-    "Audience": ""
+      "Key" : "UltraSecretKeyedp56brxb0iOSSbX123456789",
+      "Issuer": "https://localhost:5001",
+      "Audience": "https://localhost:5001"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=SEU_SERVIDOR;Database=RegistroPontoDB;User Id=SEU_USUARIO;Password=SUA_SENHA;TrustServerCertificate=True"
